--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -6,9 +6,7 @@
   <div class="items-sell-main">
     <h2 class="items-sell-title">商品の情報を入力</h2>
     <%= form_with model: @item, local: true do |f| %>
-      <%# インスタンスを渡して、エラー発生時にメッセージが表示される%>
       <%= render 'shared/error_messages', model: f.object %>
-    
       <%# 出品画像 %>
       <div class="img-upload">
         <div class="weight-bold-text">
@@ -62,7 +60,7 @@
       <div class="items-detail">
         <div class="weight-bold-text question-text">
           <span>配送について</span>
-          <a class="question" href="#">?</a>
+          <%= link_to '?', '#', class:"question"%>
         </div>
         <div class="form">
           <div class="weight-bold-text">
@@ -88,7 +86,7 @@
       <div class="sell-price">
         <div class="weight-bold-text question-text">
           <span>販売価格<br>(¥300〜9,999,999)</span>
-          <a class="question" href="#">?</a>
+          <%= link_to '?', '#', class:"question"%>
         </div>
         <div>
           <div class="price-content">
@@ -118,18 +116,18 @@
       <%# 注意書き %>
       <div class="caution">
         <p class="sentence">
-          <a href="#">禁止されている出品、</a>
-          <a href="#">行為</a>
+           <%= link_to '禁止されている出品、', '#' %>
+           <%= link_to '行為', '#' %>
           を必ずご確認ください。
         </p>
         <p class="sentence">
           またブランド品でシリアルナンバー等がある場合はご記載ください。
-          <a href="#">偽ブランドの販売</a>
+          <%= link_to '偽ブランドの販売', '#' %>
           は犯罪であり処罰される可能性があります。
         </p>
         <p class="sentence">
           また、出品をもちまして
-          <a href="#">加盟店規約</a>
+          <%= link_to '加盟店規約', '#' %>
           に同意したことになります。
         </p>
       </div>
