--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -128,11 +128,12 @@
       <% if @items.exists? %>
         <% @items.each do |item| %>
           <li class='list'>
-            <%= link_to "#" do %>
+            <%= link_to item_path(item.id) do %>
               <div class='item-img-content'>
                 <%= image_tag item.image, class: "item-img" if item.image.attached? %>
 
                 <%# 商品が売れていればsold outの表示 %>
+                <%# if item.sold_out == true %>
                 <%##<div class='sold-out'>
                   <span>Sold Out!!</span>
                 </div>
