--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,13 +9,11 @@
     <div class='item-img-content'>
       <%= image_tag @item.image ,class:"item-box-img" %>
 
-      <%# 商品が売れている場合は、sould outの表示をしましょう。 %>
-      <%# if item.sold_out == true %>
-        <%#<div class='sold-out'>
+      <% if @item.sold_out == true %>
+        <div class='sold-out'>
           <span>Sold Out!!</span>
         </div>
-      <%# end %>
-      <%# //商品が売れている場合は、sould outの表示をしましょう。 %>
+      <% end %>
 
     </div>
     <div class="item-price-box">
@@ -31,7 +29,8 @@
       <%= link_to '商品の編集', edit_item_path, method: :get, class: "item-red-btn" %>
       <p class='or-text'>or</p>
       <%= link_to '削除', item_path, method: :delete, class:'item-destroy' %>
-    <% else %>
+    <% end %>
+    <% if @item.sold_out == false && current_user != @item.user %>
       <%= link_to '購入画面に進む', item_itempurchases_path(@item), class:"item-red-btn"%>
     <% end %>
 
